@@ -20,6 +20,7 @@ prevents F2 giving the user the feel that they can.
 [1701508] Entry times no longer written out if not set
 [1702623] Compare now shows correct filenames
 [] Fix problem with remembering Tree state on restore after minimize
+[1678527] Line delimiter now works during import of plain text
 
 New Features for 3.07.01
 ========================
